[package]
name = "easy_amqp"
version = "0.1.0"
edition = "2024"

[lib]
name = "easy_amqp"
path = "src/lib.rs"

[dependencies]
lapin = "2.5"
tokio = { version = "1", features = ["full"] }
deadpool = "0.10"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
chrono = "0.4"
